# cambrian

./: .gitignore  CAMBRIAN_FOUNDATION.md  CAMBRIAN_PRODUCT_DEFINITION.md  CLAUDE.md  HARNESS_ARTIFACT_SYSTEM.md  IMPLEMENTATION_NOTES.md  README.md  README_EN.md  REPORT_audit_directive_1.md  REPORT_session_2026-04-11.md  REPORT_task26_harness_brain_mvp.md  REPORT_task27_harness_brain_v1.md  REPORT_task28_harness_to_adoption_handoff.md  REPORT_task29_review_gate_candidate.md  SDD.md  SDD_JUDGE_EVOLUTION.md  SKILL_ARTIFACT_SYSTEM.md  SPEC.md  cambrian_policy.json  chart_h1.html  pyproject.toml  real_input.json
docs/: ALPHA_INSTALL.md  ALPHA_RELEASE_GATE.md  ARTIFACTS.md  COMMANDS.md  FIRST_RUN_DEMO.md  PROJECT_MODE_QUICKSTART.md
engine/: __init__.py  _data_path.py  absorber.py  acquirer.py  autopsy.py  benchmark.py  cli.py  critic.py  decision.py  demo_project.py  evolution.py  exceptions.py  executor.py  fuser.py  generator.py  harness.py  judge.py  llm.py  loader.py  loop.py  models.py  policy.py  portability.py  project_activity.py  project_alpha_audit.py  project_clarifier.py  project_context.py  project_continue.py  project_do.py  project_doctor.py  project_errors.py  project_memory.py  project_memory_context.py  project_memory_hygiene.py  project_memory_overrides.py  project_memory_patch.py  project_memory_router.py  project_mode.py  project_next.py  project_notes.py  (+19 more)
schemas/: meta.schema.json
scripts/: alpha_smoke_install.py  e2e_realuse.sh  real_evolution_test.py  real_phase2_test.py  smoke_test.sh  test_seed_skills.py
specs/: step01_judge_verdict_model.md
tests/: conftest.py  test_absorber.py  test_absorber_hardening.py  test_acquirer.py  test_adoption.py  test_alpha_packaging.py  test_autopsy.py  test_benchmark.py  test_brain.py  test_brain_competitive.py  test_budget.py  (+70 more)
(+100 files in other folders)
